--- a/countries-app/src/app/app.component.html
+++ b/countries-app/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1>Countries of the World</h1>
-<button class="material-btn" (click)="getData()">FETCH DATA</button>
+<button type="button" class="material-btn" (click)="getData()">
+  FETCH DATA
+</button>
 <ul>
-  <li *ngFor="let country of countryData">
+  <li *ngFor="let country of countryData" aria-label="list-item">
     <img [src]="" height="32px" width="32px" />
     <span>{{ country.name }}</span>
   </li>
